--- a/src/app/pages/subpages/swipper/swipper.page.html
+++ b/src/app/pages/subpages/swipper/swipper.page.html
@@ -16,21 +16,21 @@
 
         <div class="carousel-content">
 
-          <div>
-            <p>
+          <div class="carousel-inner">
+            <p class="carousel-title-page-1">
               Bem-vindo, usuário!
               O <span>FilaMed</span> é o aplicativo
               feito para ajudar <span>você</span>!
             </p>
           </div>
 
-          <div>
+          <div class="carousel-inner">
             <img src="../../../../assets/images/swipper/enf-light-mode.png" alt="" id="enf-img">
             <img src="../../../../assets/images/swipper/enf-dark-mode.png" alt="" id="enf-img-1">
           </div>
 
-          <div>
-            <p>
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-1">
               Entenda como nosso <span>APP</span> funciona
               nas próximas páginas!
             </p>
@@ -52,26 +52,26 @@
 
         <div class="carousel-content">
 
-          <div>
-            <p>
-              Bem-vindo, usuário!
-              O <span>FilaMed</span> é o aplicativo
-              feito para ajudar <span>você</span>!
+          <div class="carousel-inner">
+            <p class="carousel-title-page-2">
+              Encontre a Unidade de Pronto Atendimento
+              que irá lhe atender <span>mais rápido</span> através
+              do <span>tempo</span> e <span>distância</span> apresentados.
             </p>
           </div>
 
-          <div>
-            <ion-card>
-              <ion-card-content>
+          <div class="carousel-inner">
+            <ion-card class="swipper-card">
+              <ion-card-content class="swipper-card-content">
                 <ion-list>
                   <ion-item>
-                    <ion-thumbnail slot="end">
+                    <ion-thumbnail slot="end" class="swipper-card-thumbnail">
                       <img alt="FilaMed Logo" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
                     </ion-thumbnail>
-                    <div class="informacoes-div">
-                      <h1>UPA Rio Maina - 3,5 km </h1>
-                      <p><i class="bi bi-geo-alt-fill icon-text"></i>&nbsp; Tempo Ida: <span>10 min</span></p>
-                      <p><i class="bi bi-clock-fill icon-text"></i>&nbsp; Fila Espera: <span>10 min</span></p>
+                    <div class="informacoes-div-swipper">
+                      <h1>UPA Exemplo - 3,5 km </h1>
+                      <p><i class="bi bi-geo-alt-fill icon-text-swipper"></i>&nbsp; Tempo Ida: <span>10 min</span></p>
+                      <p><i class="bi bi-clock-fill icon-text-swipper"></i>&nbsp; Fila Espera: <span>10 min</span></p>
                     </div>
                   </ion-item>
                 </ion-list>
@@ -79,10 +79,11 @@
             </ion-card>
           </div>
 
-          <div>
-            <p>
-              Entenda como nosso <span>APP</span> funciona
-              nas próximas páginas!
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-2">
+              Ao tocar na unidade desejada, seja
+              <span>redirecionado diretamente Google Maps</span>,
+              para seguir o caminho do hospital selecionado!
             </p>
           </div>
 
@@ -101,6 +102,51 @@
 
         <div class="carousel-content">
 
+          <div class="carousel-inner">
+            <p class="carousel-title-page-3">
+              A tela de <span>Emergência</span> apresenta à você as 
+              opções de <span>UPAs</span> disponíveis, <span>seu tempo de 
+              distância</span> e <span>seu tempo para atendimento</span>!
+            </p>
+          </div>
+
+          <div class="carousel-inner">
+
+
+            <ion-tab-bar class="tab-bar-swipper">
+              <ion-tab-button tab="home" class="tab-selected">
+                <i class="bi bi-hospital-fill icons-tab-swipper"></i>
+                Emergência
+              </ion-tab-button>
+              <ion-tab-button tab="mapa">
+                <ion-icon name="map" class="icons-tab-swipper"></ion-icon>
+                Mapa
+              </ion-tab-button>
+              <ion-tab-button tab="telefones">
+                <ion-icon name="call" class="icons-tab-swipper"></ion-icon>
+                Telefones
+              </ion-tab-button>
+              <ion-tab-button tab="configuracoes">
+                <ion-icon name="settings" class="icons-tab-swipper"></ion-icon>
+                Configurações
+              </ion-tab-button>
+            </ion-tab-bar>
+
+
+
+          </div>
+
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-3">
+              Ao ter uma situação em que necessite de
+              atendimento imediato, <span>conte conosco</span>!
+            </p>
+          </div>
+
+        </div>
+
+        <div class="dedo-apontado-3">
+          <i class="bi bi-hand-index"></i>
         </div>
 
         <div class="indicators-container">
@@ -115,6 +161,26 @@
       <div class="carousel-page">
 
         <div class="carousel-content">
+
+          <div class="carousel-inner">
+            <p class="carousel-title-page-4">
+              Encontre a Unidade de Pronto Atendimento
+              que irá lhe atender mais rápido através
+              do tempo e distância apresentados.
+            </p>
+          </div>
+
+          <div class="carousel-inner">
+
+          </div>
+
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-4">
+              Entenda como nosso <span>APP</span> funciona
+              nas próximas páginas!
+            </p>
+          </div>
+
 
         </div>
 
@@ -131,6 +197,26 @@
 
         <div class="carousel-content">
 
+          <div class="carousel-inner">
+            <p class="carousel-title-page-5">
+              Encontre a Unidade de Pronto Atendimento
+              que irá lhe atender mais rápido através
+              do tempo e distância apresentados.
+            </p>
+          </div>
+
+          <div class="carousel-inner">
+
+          </div>
+
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-5">
+              Entenda como nosso <span>APP</span> funciona
+              nas próximas páginas!
+            </p>
+          </div>
+
+
         </div>
 
         <div class="indicators-container">
@@ -146,6 +232,26 @@
 
         <div class="carousel-content">
 
+          <div class="carousel-inner">
+            <p class="carousel-title-page-6">
+              Encontre a Unidade de Pronto Atendimento
+              que irá lhe atender mais rápido através
+              do tempo e distância apresentados.
+            </p>
+          </div>
+
+          <div class="carousel-inner">
+
+          </div>
+
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-6">
+              Entenda como nosso <span>APP</span> funciona
+              nas próximas páginas!
+            </p>
+          </div>
+
+
         </div>
 
         <div class="indicators-container">
@@ -160,6 +266,26 @@
       <div class="carousel-page">
 
         <div class="carousel-content">
+
+          <div class="carousel-inner">
+            <p class="carousel-title-page-7">
+              Encontre a Unidade de Pronto Atendimento
+              que irá lhe atender mais rápido através
+              do tempo e distância apresentados.
+            </p>
+          </div>
+
+          <div class="carousel-inner">
+
+          </div>
+
+          <div class="carousel-inner">
+            <p class="carousel-footer-page-7">
+              Entenda como nosso <span>APP</span> funciona
+              nas próximas páginas!
+            </p>
+          </div>
+
 
         </div>
 
