--- a/src/app/pages/subpages/swipper/swipper.page.scss
+++ b/src/app/pages/subpages/swipper/swipper.page.scss
@@ -1,5 +1,3 @@
-
-
 .transparent-toolbar {
     --background: transparent;
     --ion-color-base: transparent !important;
@@ -16,16 +14,29 @@ ion-toolbar {
     box-shadow: none !important;
 }
 
-ion-button{
+ion-button {
     position: absolute;
 }
 
-.carousel-content{
+.carousel-content {
     width: 75%;
     height: 70%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+    flex: 0 0 100%;
+    display: flex;
+    flex-direction: column;
+    z-index: 1; /* Número MAIOR que o pai */
+}
+.carousel-inner {
+  width: 100%;
+  height: 100%;           /* Ocupa 100% da altura */
+  display: flex;
+  flex-direction: column; /* Conteúdo em coluna */
+  justify-content: center; /* Centraliza verticalmente */
+  align-items: center;     /* Centraliza horizontalmente */
+  /* Remove padding-bottom se existir */
+
 }
