--- a/src/app/pages/telefones/telefones.page.html
+++ b/src/app/pages/telefones/telefones.page.html
@@ -1,8 +1,21 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="presentPopover($event)">
+        <ion-icon 
+          name="ellipsis-vertical" 
+          >
+        </ion-icon>
+      </ion-button>
+    </ion-buttons>
 
+    <div class="titulos-container">
+      <ion-title id="home-title">Telefones de Emergência:</ion-title>
+     
+    </div>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
