--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="end">
-      <ion-button (click)="presentPopover($event)">
-        <ion-icon 
+      <ion-button id="botao-toolbar" (click)="presentPopover($event)">
+        <ion-icon id="icon-toolbar"
           name="ellipsis-vertical" 
           >
         </ion-icon>
